changed the colors and style of the about us oage

--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -9,12 +9,12 @@
 
     <title>Über uns</title>
 </head>
-<body style = "background-color: black; overflow-x: hidden; font-family: Merriweather, sans-serif">
+<body style = "background-color: #F9F4E6; overflow-x: hidden; font-family: Merriweather, sans-serif">
 
-<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black">
+<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast" >
     <div class="container-fluid">
 
-            <img src="icones/new-logo-gredient-no-text.png" alt="Home" width="50" height="50">
+        <img src="icones/logo-green-no-text.png" alt="Home" width="50" height="50">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,27 +23,27 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="index.html">
-                        <img src="icones/bxs-home.svg" class = "changeColor" alt="Shop" width="20" height="20"> Home
+                        <img src="icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> Home
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="shop.html">
-                        <img src="icones/bx-shopping-bag.svg" class = "changeColor" alt="Shop" width="20" height="20" > Produkte
+                    <a class="nav-link textInNavBar"  href="shop.html">
+                        <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Produkte
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="nutrition.html">
-                        <img src="icones/bx-baguette.svg" class = "changeColor" alt="Ernährungspläne" width="20" height="20"> Ernährungspläne
+                        <img src="icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> Ernährungspläne
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="trainings-plan.html">
-                        <img src="icones/bx-run.svg" class = "changeColor" alt="Trainingspläne" width="20" height="20"> Trainingspläne
+                        <img src="icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> Trainingspläne
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="about-us.html">
-                        <img src="icones/bxs-group.svg" class = "changeColor" alt="Über uns" width="20" height="20"> Über uns
+                        <img src="icones/bxs-group.svg"  class="changeColor" alt="Über uns" width="20" height="20"> Über uns
                     </a>
                 </li>
             </ul>
@@ -63,7 +63,7 @@
             </button>
         </div>
         <div class="col-md-8">
-            <p class="styleForPInAboutUsWritingTextLeft">
+            <p class="styleForPInAboutUsWritingTextLeft text-color">
                 Ich bin Jan Brunner, 15 Jahre alt und leite dieses Projekt zusammen mit meinen Schulkollegen. <br>
                 In meiner Freizeit beschäftige ich mich mit Webprogrammierung, sowie auch C# und C Programmierung.
             </p>
@@ -79,7 +79,7 @@
             </button>
         </div>
         <div class="col-md-8">
-            <p class="styleForPInAboutUsWritingTextRight">
+            <p class="styleForPInAboutUsWritingTextRight text-color">
                 Ich bin Lorenz Parzer, 16 Jahre alt und wohne in Österreich und ein Schüler und angehender Softwareentwickler an der HTL Leonding.<br>
                 In meiner Freizeit trainiere ich gerne, also gehe ins Fitnessstudio, versuche mich zu verbessern in allen Facetten. <br>
                 Ich liebe es zu Programmieren und besuche gerne die HTL Leonding.
@@ -96,7 +96,7 @@
             </button>
         </div>
         <div class="col-md-8">
-            <p class="styleForPInAboutUsWritingTextLeft">
+            <p class="styleForPInAboutUsWritingTextLeft text-color">
                 Mein Name ist Ernad Music und ich bin Schüler der HTL Leonding und einer der Entwickler dieser Website. <br>
                 Ich bin 16 und ursprünglich in Bosnien geboren. <br>
                 Meine großen Hobbys sind das Coden in C# und das Erlernen neuer Dinge über das Programmieren.
@@ -113,7 +113,7 @@
             </button>
         </div>
         <div class="col-md-8">
-            <p class="styleForPInAboutUsWritingTextRight">
+            <p class="styleForPInAboutUsWritingTextRight text-color">
                 Mein Name ist Mario Solomun und ich bin Teil der Entwickler von dieser Webseite. <br>
                 Ich bin Schüler an der HTL Leonding und besuche momentan den zweiten Jahrgang vom Zweig Informatik. <br>
                 Ich bin 16 Jahre alt und zu meinen Hobbies zählen das Programmieren und ich verbringe sehr gerne Zeit mit Freunden und Familie.
@@ -122,29 +122,29 @@
     </div>
 </div>
 
-<div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
+<div class="container my-" style = "margin-top: 7%; margin-bottom: 5%">
 
-    <footer class="text-center text-lg-start border border-white mt-xl-5 pt-4">
+    <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style=" box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <!-- Grid container -->
         <div class="container p-4">
             <!--Grid row-->
             <div class="row">
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter">Unsere Welt</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5;">Unsere Welt</h5>
 
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="shop.html" class="text-white hover-effects">Produkte</a>
+                            <a href="shop.html" class="hover-effects" style="color: #ffffff ;">Produkte</a>
                         </li>
                         <li>
-                            <a href="trainings-plan.html" class="text-white hover-effects">Trainingspläne</a>
+                            <a href="trainings-plan.html" class="hover-effects" style="color: #ffffff;">Trainingspläne</a>
                         </li>
                         <li>
-                            <a href="nutrition.html" class="text-white hover-effects">Ernährungspläne</a>
+                            <a href="nutrition.html" class="hover-effects" style="color: #ffffff;">Ernährungspläne</a>
                         </li>
                         <li>
-                            <a href="about-us.html" class="text-white hover-effects">Über uns</a>
+                            <a href="about-us.html" class="hover-effects" style="color: #ffffff;">Über uns</a>
                         </li>
                     </ul>
                 </div>
@@ -176,7 +176,7 @@
                 </div>
                 <!--Grid column-->
                 <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="icones/new-logo-gredient-no-text.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
+                    <img src="icones/logo-green-no-text.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
                 </div>
             </div>
             <!--Grid row-->
