finished making the whole website same

--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -54,7 +54,7 @@
 
 <section class="text-center py-5" style="margin-top: 5%">
     <h1 class="title-nutrition">Ernährungspläne</h1>
-    <p class="lead text-color">Individuelle Empfehlungen für ältere Menschen und Menschen mit Behinderungen.</p>
+    <p class="lead text-color">Individuelle Empfehlungen für ältere Menschen und Menschen mit Behinderungen</p>
 </section>
 
 <div class="container mt-5">
