changed the color of the cards in the main page

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -56,7 +56,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <h1 class="headLine display-4">Willkommen bei Fitness & Health</h1>
-        <p class="lead">Individuelle Lösungen für ein besseres Wohlbefinden – egal in welchem Alter.</p>
+        <p class="lead" style="font-weight: lighter">Individuelle Lösungen für ein besseres Wohlbefinden – egal in welchem Alter.</p>
         <button class="btn btn-primary btn-lg" style="background-color: #6AA84F;border: #6AA84F; color: black ">Starte jetzt</button>
     </section>
 
@@ -66,21 +66,21 @@
             <div class="col-md-4">
                 <div class="card shadow-sm p-4 icon-card">
                     <img src="https://via.placeholder.com/100" alt="Plan Icon" class="mx-auto d-block mb-3">
-                    <h5 class="card-title">Individuelle Pläne</h5>
+                    <h5 class="card-title" style="color: #6AA84F">Individuelle Pläne</h5>
                     <p class="card-text">Erhalte Trainings- und Ernährungspläne, die genau auf deine Bedürfnisse abgestimmt sind.</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card shadow-sm p-4 icon-card">
                     <img src="https://via.placeholder.com/100" alt="Support Icon" class="mx-auto d-block mb-3">
-                    <h5 class="card-title">Einfacher Support</h5>
+                    <h5 class="card-title" style="color: #6AA84F">Einfacher Support</h5>
                     <p class="card-text">Unser Team unterstützt dich bei jedem Schritt auf deinem Weg.</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card shadow-sm p-4 icon-card">
                     <img src="https://via.placeholder.com/100" alt="Results Icon" class="mx-auto d-block mb-3">
-                    <h5 class="card-title">Nachhaltige Ergebnisse</h5>
+                    <h5 class="card-title" style="color: #6AA84F">Nachhaltige Ergebnisse</h5>
                     <p class="card-text">Verbessere deine Gesundheit langfristig und spüre die Veränderung.</p>
                 </div>
             </div>
