--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -57,7 +57,7 @@
     <section class="hero">
         <h1 class="headLine display-4">Willkommen bei Fitness & Health</h1>
         <p class="lead" style="font-weight: lighter">Individuelle Lösungen für ein besseres Wohlbefinden – egal in welchem Alter.</p>
-        <button class="btn btn-primary btn-lg" style="background-color: #6AA84F;border: #6AA84F; color: black ">Starte jetzt</button>
+        <button class="btn btn-primary btn-lg" style="background-color: #6AA84F;border: #6AA84F; color: black " onclick="document.location = 'nutrition.html'">Starte jetzt</button>
     </section>
 
     <!-- Features Section -->
