finished with styling of the training sub pages and changed the footer a bit

--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -122,7 +122,7 @@
     </div>
 </div>
 
-<div class="container my-" style = "margin-top: 7%; margin-bottom: 5%">
+<div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
 
     <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style=" box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <!-- Grid container -->
@@ -135,16 +135,16 @@
 
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="shop.html" class="hover-effects" style="color: #ffffff ;">Produkte</a>
+                            <a href="shop.html" class="hover-effects" >Produkte</a>
                         </li>
                         <li>
-                            <a href="trainings-plan.html" class="hover-effects" style="color: #ffffff;">Trainingspläne</a>
+                            <a href="trainings-plan.html" class="hover-effects" >Trainingspläne</a>
                         </li>
                         <li>
-                            <a href="nutrition.html" class="hover-effects" style="color: #ffffff;">Ernährungspläne</a>
+                            <a href="nutrition.html" class="hover-effects">Ernährungspläne</a>
                         </li>
                         <li>
-                            <a href="about-us.html" class="hover-effects" style="color: #ffffff;">Über uns</a>
+                            <a href="about-us.html" class="hover-effects">Über uns</a>
                         </li>
                     </ul>
                 </div>
@@ -158,7 +158,7 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#!" class="text-white hover-effects">Jobs</a>
+                            <a href="#!" class="hover-effects">Jobs</a>
                         </li>
                     </ul>
                 </div>
@@ -169,7 +169,7 @@
                     <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
 
                     <div class="form-outline form-white mb-4">
-                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects" style = "color: white">Klicke hier</a>
+                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects">Klicke hier</a>
 
                     </div>
 
