--- a/fitness-and-health-website/trainings-plan-old.html
+++ b/fitness-and-health-website/trainings-plan-old.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="stylesheet-training-plan-subpages.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="stylesheet-training-plan-subpages.css">
     <title>Trainingspläne für Ältere</title>
 </head>
 </head>
 <body>
 <!-- Sticky Top Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black" >
+<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast" >
     <div class="container-fluid">
 
-        <img src="icones/new-logo-gredient-no-text.png" alt="Home" width="50" height="50">
+        <img src="icones/logo-green-no-text.png" alt="Home" width="50" height="50">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="index.html">
-                        <img src="icones/bxs-home.svg" class = "changeColor" alt="Shop" width="20" height="20"> Home
+                        <img src="icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> Home
                     </a>
                 </li>
                 <li class="nav-item">
@@ -52,23 +52,19 @@
 </nav>
 
 <!-- Header Container -->
-<div class="container mt-5 pt-5">
-    <!-- Header Section -->
-    <header class="hero text-center">
-        <h1>Trainingspläne für Ältere</h1>
-    </header>
-</div>
-
+<section class="text-center py-5" style="margin-top: 5%">
+    <h1 class="title-disabled-old">Trainingspläne für Ältere</h1>
+</section>
 <!-- Trainingsplan für Stuhlübungen, Mobilitätstraining und Individuelle Anpassungen -->
 <div class="container my-5">
     <div class="table-responsive">
         <table class="table table-dark table-striped m-0">
             <thead>
             <tr>
-                <th>Tag</th>
+                <th style="border-top-left-radius: 10px">Tag</th>
                 <th>Stuhlübungen</th>
                 <th>Mobilitätstraining</th>
-                <th>Individuelle Anpassungen</th>
+                <th style="border-top-right-radius: 10px">Individuelle Anpassungen</th>
             </tr>
             </thead>
             <tbody>
@@ -109,10 +105,10 @@
                 <td>Angepasste Beinübungen: Anpassung der Übungen zur Beinstärkung je nach Mobilitätsgrad.</td>
             </tr>
             <tr>
-                <td>Sonntag</td>
+                <td style="border-bottom-left-radius: 10px">Sonntag</td>
                 <td>Sanfte Nackenbewegungen (3 x 15 Wiederholungen): Lindert Verspannungen im Nackenbereich.</td>
                 <td>Hüftdehnung im Sitzen (3 x 30 Sek. pro Seite): Fördert die Beweglichkeit der Hüfte und lindert Verspannungen.</td>
-                <td>Sanfte Mobilisation der Wirbelsäule im Sitzen: Fördert die Flexibilität und Linderung von Rückenbeschwerden.</td>
+                <td style="border-bottom-right-radius: 10px">Sanfte Mobilisation der Wirbelsäule im Sitzen: Fördert die Flexibilität und Linderung von Rückenbeschwerden.</td>
             </tr>
             </tbody>
         </table>
@@ -122,27 +118,27 @@
 
 <div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
 
-    <footer class="text-center text-lg-start border border-white mt-xl-5 pt-4">
+    <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style=" box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <!-- Grid container -->
         <div class="container p-4">
             <!--Grid row-->
             <div class="row">
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter">Unsere Welt</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5;">Unsere Welt</h5>
 
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="shop.html" class="text-white hover-effects">Produkte</a>
+                            <a href="shop.html" class="hover-effects" >Produkte</a>
                         </li>
                         <li>
-                            <a href="trainings-plan.html" class="text-white hover-effects">Trainingspläne</a>
+                            <a href="trainings-plan.html" class="hover-effects" >Trainingspläne</a>
                         </li>
                         <li>
-                            <a href="nutrition.html" class="text-white hover-effects">Ernährungspläne</a>
+                            <a href="nutrition.html" class="hover-effects">Ernährungspläne</a>
                         </li>
                         <li>
-                            <a href="about-us.html" class="text-white hover-effects">Über uns</a>
+                            <a href="about-us.html" class="hover-effects">Über uns</a>
                         </li>
                     </ul>
                 </div>
@@ -156,7 +152,7 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#!" class="text-white hover-effects">Jobs</a>
+                            <a href="#!" class="hover-effects">Jobs</a>
                         </li>
                     </ul>
                 </div>
@@ -167,17 +163,19 @@
                     <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
 
                     <div class="form-outline form-white mb-4">
-                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects" style = "color: white">Klicke hier</a>
+                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects">Klicke hier</a>
 
                     </div>
 
                 </div>
+                <!--Grid column-->
                 <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="icones/new-logo-gredient-no-text.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
+                    <img src="icones/logo-green-no-text.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
                 </div>
             </div>
-
+            <!--Grid row-->
         </div>
+        <!-- Grid container -->
 
     </footer>
 
