--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -199,7 +199,7 @@
     <p class="text-color">Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.</p>
 </div>
 
-<div class="container " style = "margin-top: 5%; margin-bottom: 5%">
+<div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
 
     <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style=" box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <!-- Grid container -->
@@ -212,16 +212,16 @@
 
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="shop.html" class="hover-effects" style="color: #ffffff ;">Produkte</a>
+                            <a href="shop.html" class="hover-effects" >Produkte</a>
                         </li>
                         <li>
-                            <a href="trainings-plan.html" class="hover-effects" style="color: #ffffff;">Trainingspläne</a>
+                            <a href="trainings-plan.html" class="hover-effects" >Trainingspläne</a>
                         </li>
                         <li>
-                            <a href="nutrition.html" class="hover-effects" style="color: #ffffff;">Ernährungspläne</a>
+                            <a href="nutrition.html" class="hover-effects">Ernährungspläne</a>
                         </li>
                         <li>
-                            <a href="about-us.html" class="hover-effects" style="color: #ffffff;">Über uns</a>
+                            <a href="about-us.html" class="hover-effects">Über uns</a>
                         </li>
                     </ul>
                 </div>
@@ -235,7 +235,7 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#!" class="text-white hover-effects">Jobs</a>
+                            <a href="#!" class="hover-effects">Jobs</a>
                         </li>
                     </ul>
                 </div>
@@ -246,7 +246,7 @@
                     <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
 
                     <div class="form-outline form-white mb-4">
-                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects" style = "color: white">Klicke hier</a>
+                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects">Klicke hier</a>
 
                     </div>
 
